# api/swagger/swagger.yaml
@@ -1,48 +1,62 @@
 basePath: /v1.0
 definitions:
-  response.ErrorResponse:
-    properties:
-      message:
-        type: string
-      name:
-        type: string
-    type: object
   response.Response:
     properties:
       data: {}
-      error:
-        $ref: '#/definitions/response.ErrorResponse'
-      serverTime:
-        type: integer
-      success:
-        type: boolean
+      detail:
+        type: string
+      errors: {}
+      title:
+        type: string
     type: object
   tapmoney.InquiryRequest:
     properties:
       amount:
+        maximum: 1000000
+        minimum: 10000
         type: integer
       card_number:
+        maxLength: 19
+        minLength: 16
         type: string
       source_account:
+        maxLength: 19
+        minLength: 16
         type: string
+    required:
+    - amount
+    - card_number
+    - source_account
     type: object
   tapmoney.PaymentRequest:
     properties:
       amount:
+        maximum: 1000000
+        minimum: 10000
         type: integer
       notes:
+        maxLength: 255
         type: string
       transaction_id:
         type: string
+    required:
+    - amount
+    - transaction_id
     type: object
   transfer.InitiateRequest:
     properties:
       amount:
+        maximum: 50000000
+        minimum: 1000
         type: integer
       destination_account:
         type: string
       source_account:
         type: string
+    required:
+    - amount
+    - destination_account
+    - source_account
     type: object
   transfer.ProcessRequest:
     properties:
@@ -54,6 +68,11 @@ definitions:
         type: string
       transaction_id:
         type: string
+    required:
+    - amount
+    - destination_account
+    - source_account
+    - transaction_id
     type: object
 host: api.bankkrud.com
 info:
@@ -205,16 +224,15 @@ paths:
       summary: Process transfer
       tags:
       - transfer
-  /users/{username}:
+  /users/me:
     get:
       consumes:
       - application/json
       description: Get user by username
       parameters:
-      - description: Username
-        in: path
-        name: username
-        required: true
+      - description: Fields
+        in: query
+        name: fields
         type: string
       produces:
       - application/json
