# internal/adapter/http/response/response.go
@@ -3,122 +3,85 @@ package response
 import (
 	"errors"
 	"net/http"
-	"time"
 
+	"go.bankkrud.com/bankkrud/backend/krudapp/internal/pkg/codes"
 	"go.bankkrud.com/bankkrud/backend/krudapp/internal/pkg/pkgerror"
 )
 
-// Data is a generic type for the data field in the response.
-type Data any
-
 // Response represents the response structure for HTTP responses.
-type Response[T Data] struct {
-	Success    bool           `json:"success"`
-	Error      *ErrorResponse `json:"errors,omitempty"`
-	Data       Data           `json:"data,omitempty"`
-	ServerTime int64          `json:"serverTime,omitempty"`
-}
-
-type ErrorResponse struct {
-	Name  string `json:"name,omitempty"`
-	Error error  `json:"error,omitempty"`
+type Response struct {
+	Title  string `json:"title,omitempty"`
+	Detail string `json:"detail,omitempty"`
+	Data   any    `json:"data,omitempty"`
+	Errors any    `json:"errors,omitempty"`
 }
 
 // Success returns status code 200 and success response with data.
-func Success(data Data) (int, *Response[Data]) {
-	return http.StatusOK, &Response[Data]{
-		Success:    true,
-		Data:       data,
-		ServerTime: serverTime(),
+func Success(data any) (int, Response) {
+	return http.StatusOK, Response{
+		Data: data,
 	}
 }
 
 // Error returns error status code and error.
-func Error(err error) (int, *Response[Data]) {
+func Error(err error) (int, Response) {
 	var e *pkgerror.Error
 	if errors.As(err, &e) {
-		return responseCode[e.Code], &Response[Data]{
-			Error: &ErrorResponse{
-				Name:  responseName[e.Code],
-				Error: err,
-			},
-			ServerTime: serverTime(),
+		switch e.Code {
+		case codes.NotFound:
+			return NotFound(err)
+		case codes.Unauthenticated:
+			return Unauthorized(err)
+		case codes.Forbidden:
+			return Forbidden(err)
+		case codes.BadRequest:
+			return BadRequest(err)
 		}
 	}
 	return InternalServerError(err)
 }
 
 // BadRequest returns status code 400 and error response.
-func BadRequest(err error) (int, *Response[Data]) {
-	return http.StatusBadRequest, &Response[Data]{
-		Success: false,
-		Error: &ErrorResponse{
-			Name:  "BadRequest",
-			Error: err,
-		},
-		ServerTime: serverTime(),
+func BadRequest(err error) (int, Response) {
+	return http.StatusBadRequest, Response{
+		Title:  "Invalid Request",
+		Detail: "One or more parameters to your request was invalid.",
+		Errors: err,
 	}
 }
 
 // Unauthorized returns status code 401 and error response.
-func Unauthorized(err error) (int, *Response[Data]) {
-	return http.StatusUnauthorized, &Response[Data]{
-		Success: false,
-		Error: &ErrorResponse{
-			Name:  "Unauthorized",
-			Error: err,
-		},
-		ServerTime: serverTime(),
+func Unauthorized(err error) (int, Response) {
+	return http.StatusUnauthorized, Response{
+		Title:  "Unauthorized",
+		Detail: "You are not authorized to access this resource.",
+		Errors: err,
 	}
 }
 
 // Forbidden returns status code 403 and error response.
-func Forbidden(err error) (int, *Response[Data]) {
-	return http.StatusForbidden, &Response[Data]{
-		Success: false,
-		Error: &ErrorResponse{
-			Name:  "Forbidden",
-			Error: err,
-		},
-		ServerTime: serverTime(),
+func Forbidden(err error) (int, Response) {
+	return http.StatusForbidden, Response{
+		Title:  "Forbidden",
+		Detail: "You do not have permission to access this resource.",
+		Errors: err,
+	}
+}
+
+// Forbidden returns status code 403 and error response.
+func NotFound(err error) (int, Response) {
+	return http.StatusNotFound, Response{
+		Title:  "Not Found",
+		Detail: "The requested resource could not be found.",
+		Errors: err,
 	}
 }
 
 // InternalServerError returns status code 500 and error response.
-func InternalServerError(err error) (int, *Response[Data]) {
-	return http.StatusInternalServerError, &Response[Data]{
-		Success: false,
-		Error: &ErrorResponse{
-			Name:  "InternalServerError",
-			Error: err,
-		},
-		ServerTime: serverTime(),
+func InternalServerError(err error) (int, Response) {
+	return http.StatusInternalServerError, Response{
+		Title:  "Internal Server Error",
+		Detail: "An unexpected error occurred on the server.",
+		Errors: err,
 	}
-}
-
-// serverTime returns the current server time in milliseconds since the Unix epoch.
-func serverTime() int64 {
-	return time.Now().UnixMilli()
-}
-
-// responseCode is a slice of integer HTTP status codes used for error response mapping.
-var responseCode = []int{
-	http.StatusOK,
-	http.StatusBadRequest,
-	http.StatusUnauthorized,
-	http.StatusForbidden,
-	http.StatusNotFound,
-	http.StatusConflict,
-	http.StatusInternalServerError,
-}
-
-// responseName is a list of string representations for HTTP response status codes.
-var responseName = []string{
-	"Ok",
-	"BadRequest",
-	"Unauthorized",
-	"Forbidden",
-	"NotFound",
-	"Conflict",
-	"InternalServerError",
 }
